stop button wrapping

--- a/src/pages/Languages/LanguageEditor/LanguageEditor.less
+++ b/src/pages/Languages/LanguageEditor/LanguageEditor.less
@@ -26,6 +26,7 @@
 
   &__add-name-button {
     margin-inline-start: var(--space);
+    align-self: center;
   }
 
   &__additional-names {
